--- a/ocp-templates/templates/elasticsearch/elasticsearch-ephemeral-node-template.yaml
+++ b/ocp-templates/templates/elasticsearch/elasticsearch-ephemeral-node-template.yaml
@@ -105,8 +105,8 @@ objects:
               cpu: '4'
               memory: 4Gi
             requests:
-              cpu: '1'
-              memory: 1Mi
+              cpu: '2'
+              memory: 2Gi
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
         dnsPolicy: ClusterFirst
