--- a/ocp-templates/templates/elasticsearch/elasticsearch-persistent-master-template.yaml
+++ b/ocp-templates/templates/elasticsearch/elasticsearch-persistent-master-template.yaml
@@ -145,8 +145,8 @@ objects:
                   cpu: '4'
                   memory: 4Gi
                 requests:
-                  cpu: '1'
-                  memory: 1Mi
+                  cpu: '2'
+                  memory: 2Gi
               terminationMessagePath: /dev/termination-log
               terminationMessagePolicy: File
               volumeMounts:
@@ -243,7 +243,7 @@ objects:
                   memory: 2Gi
                 requests:
                   cpu: '1'
-                  memory: 1Mi
+                  memory: 1Gi
               terminationMessagePath: /dev/termination-log
               terminationMessagePolicy: File
           dnsPolicy: ClusterFirst
