--- a/ocp-templates/templates/elasticsearch/elasticsearch-persistent-node-template.yaml
+++ b/ocp-templates/templates/elasticsearch/elasticsearch-persistent-node-template.yaml
@@ -113,8 +113,8 @@ objects:
                   cpu: '4'
                   memory: 4Gi
                 requests:
-                  cpu: '1'
-                  memory: 1Mi
+                  cpu: '2'
+                  memory: 2Gi
               terminationMessagePath: /dev/termination-log
               terminationMessagePolicy: File
               volumeMounts:
