--- a/boilerplates/ds-ml-service/Jenkinsfile
+++ b/boilerplates/ds-ml-service/Jenkinsfile
@@ -111,11 +111,16 @@ def stageCustomStartOpenshiftBuild(def context, def stageName, def componentId) 
             sh (script: "oc start-build ${componentId} --from-dir docker --follow -n ${context.targetProject}", label : "start openshift build")
         }
 
+        // MRO final stage
         if(componentId.contains('prediction')) {
-            def ocpbuild = sh(returnStdout: true, script:"oc get build --sort-by=.status.startTimestamp -o jsonpath='{.items[-1:].metadata.name},{.items[-1:].status.phase}' -n ${context.targetProject} -l buildconfig=${componentId}", label : "find last build").trim().split(',')
+            def ocpbuildId
+            def ocpbuildStatus
 
-            def ocpbuildId = ocpbuild[0]
-            def ocpbuildStatus = ocpbuild[1]
+            while (ocpbuildStatus == null || ocpbuildStatus.toString().trim().toLowerCase() == "running") {
+                def ocpbuild = sh(returnStdout: true, script:"sleep 10 && oc get build --sort-by=.status.startTimestamp -o jsonpath='{.items[-1:].metadata.name},{.items[-1:].status.phase}' -n ${context.targetProject} -l buildconfig=${componentId}", label : "find last build").trim().split(',')
+                ocpbuildId = ocpbuild[0]
+                ocpbuildStatus = ocpbuild[1]
+            }
 
             if (ocpbuildStatus.toString().trim().toLowerCase() != "complete") {
                 error "OCP Build ${ocpbuildId} was not successfull - status ${ocpbuildStatus}"
@@ -196,6 +201,7 @@ def stageCustomDeployToOpenshift(def context, def stageName, def componentId) {
 
         waitForTrainingPod(context, componentId)
 
+        // MRO final stage 
         if(componentId.contains('prediction')) {
             def ocpLatestImage = sh(returnStdout: true, script:"oc get istag ${componentId}:latest -n ${context.targetProject} -o jsonpath='{.image.dockerImageReference}'", label : "find last image").trim()
 
