--- a/jenkins-slaves/nodejs10-angular/ocp-config/bc.yml
+++ b/jenkins-slaves/nodejs10-angular/ocp-config/bc.yml
@@ -1,19 +1,16 @@
 apiVersion: v1
 kind: Template
 metadata:
-  annotations: {}
-  creationTimestamp: null
   name: jenkins-slave-nodejs10-angular
 objects:
 - apiVersion: v1
   kind: BuildConfig
   metadata:
-    annotations: {}
-    creationTimestamp: null
     name: jenkins-slave-nodejs10-angular
     labels:
       app: jenkins-slave-nodejs10-angular
   spec:
+    failedBuildsHistoryLimit: 5
     nodeSelector: null
     output:
       to:
@@ -42,6 +39,7 @@ objects:
           kind: ImageStreamTag
           name: jenkins-slave-base:latest
       type: Docker
+    successfulBuildsHistoryLimit: 5
     triggers: []
 parameters:
 - name: NEXUS_URL
