--- a/ocp-templates/ocp-config/cd-docgen/cd-docgen.yml
+++ b/ocp-templates/ocp-config/cd-docgen/cd-docgen.yml
@@ -62,6 +62,20 @@ objects:
                   memory: '${MEMORY_REQUEST}'
               terminationMessagePath: /dev/termination-log
               terminationMessagePolicy: File
+              env:
+                - name: BITBUCKET_URL
+                  value: 'https://${BITBUCKET_HOST}'
+                - name: BITBUCKET_USERNAME
+                  value: cd_user
+                - name: BITBUCKET_PASSWORD
+                  valueFrom:
+                    secretKeyRef:
+                      key: password
+                      name: cd-user-token
+                - name: BITBUCKET_DOCUMENT_TEMPLATES_PROJECT
+                  value: opendevstack
+                - name: BITBUCKET_DOCUMENT_TEMPLATES_REPO
+                  value: ods-document-generation-templates
           dnsPolicy: ClusterFirst
           restartPolicy: Always
           schedulerName: default-scheduler
@@ -94,3 +108,4 @@ parameters:
     description: Minimum amount of memory requested for the container.
     value: 256Mi
     required: true
+    
