--- a/boilerplates/fe-ionic/Jenkinsfile
+++ b/boilerplates/fe-ionic/Jenkinsfile
@@ -17,10 +17,10 @@ library identifier: 'ods-library@production', retriever: modernSCM(
 /*
   See readme of shared library for usage and customization
   @ https://github.com/opendevstack/ods-jenkins-shared-library/blob/master/README.md
-  eg. to create and set your own builder slave instead of 
+  eg. to create and set your own builder slave instead of
   the node js slave used here - the code of the slave can be found at
   https://github.com/opendevstack/ods-project-quickstarters/tree/master/jenkins-slaves/nodejs8-angular
- */ 
+ */
 odsPipeline(
   image: "${dockerRegistry}/cd/jenkins-slave-nodejs8-angular",
   projectId: projectId,
@@ -54,9 +54,13 @@ def stageBuild(def context) {
 }
 
 def stageUnitTest(def context) {
+  try {
     stage('Unit Test') {
       sh "yarn test -- --single-run --progress false"
     }
+  } finally {
+    junit 'build/test-results/test/test-results.xml'
+  }
 }
 
 def stageLint(def context) {
