--- a/boilerplates/ds-ml-service/Jenkinsfile
+++ b/boilerplates/ds-ml-service/Jenkinsfile
@@ -16,7 +16,7 @@ node {
     dockerRegistry = env.DOCKER_REGISTRY
 }
 
-library identifier: 'ods-library@production', retriever: modernSCM(
+library identifier: 'ods-library@1.2.x', retriever: modernSCM(
     [$class       : 'GitSCMSource',
         remote       : sharedLibraryRepository,
         credentialsId: credentialsId])
@@ -201,7 +201,7 @@ def stageCustomDeployToOpenshift(def context, def stageName, def componentId) {
 
         waitForTrainingPod(context, componentId)
 
-        // MRO final stage 
+        // MRO final stage
         if(componentId.contains('prediction')) {
             def ocpLatestImage = sh(returnStdout: true, script:"oc get istag ${componentId}:latest -n ${context.targetProject} -o jsonpath='{.image.dockerImageReference}'", label : "find last image").trim()
 
