--- a/boilerplates/e2e-cypress/Jenkinsfile
+++ b/boilerplates/e2e-cypress/Jenkinsfile
@@ -9,7 +9,7 @@ node {
   dockerRegistry = env.DOCKER_REGISTRY
 }
 
-library identifier: 'ods-library@production', retriever: modernSCM(
+library identifier: 'ods-library@1.2.x', retriever: modernSCM(
   [$class: 'GitSCMSource',
    remote: sharedLibraryRepository,
    credentialsId: credentialsId])
@@ -17,10 +17,10 @@ library identifier: 'ods-library@production', retriever: modernSCM(
 /*
   See readme of shared library for usage and customization
   @ https://github.com/opendevstack/ods-jenkins-shared-library/blob/master/README.md
-  eg. to create and set your own builder slave instead of 
+  eg. to create and set your own builder slave instead of
   the node js slave used here - the code of the slave can be found at
   https://github.com/opendevstack/ods-project-quickstarters/tree/master/jenkins-slaves/nodejs8-angular
- */ 
+ */
 odsPipeline(
   image: "${dockerRegistry}/cd/jenkins-slave-nodejs8-angular",
   projectId: projectId,
