--- a/rundeck-jobs/quickstarts/be_scala_akka.yaml
+++ b/rundeck-jobs/quickstarts/be_scala_akka.yaml
@@ -31,7 +31,7 @@
   scheduleEnabled: true
   sequence:
     commands:
-    - exec: 'echo "openshift_api_token: <blinded> project_id: ${option.project_id},  component_id:
+    - exec: 'echo "openshift_api_token: ******** project_id: ${option.project_id},  component_id:
         ${option.component_id}, git_url_http: ${option.git_url_http}, git_url_ssh:
         ${option.git_url_ssh}, package_name: ${option.package_name}"'
     - description: checkout quickstart
