--- a/boilerplates/airflow/Jenkinsfile
+++ b/boilerplates/airflow/Jenkinsfile
@@ -41,7 +41,7 @@ def stageDAGTest(def context) {
 
 def stageUnitTest(def context) {
     stage('Unit Tests') {
-        sh "pip install -i ${context.nexusHostWithBasicAuth}/repository/pypi-all/simple -r src/requirements.txt --user"
+        sh "pip install -i ${context.nexusHostWithBasicAuth}/repository/pypi-all/simple --trusted-host ${context.nexusHost.tokenize('//')[1]} -r src/requirements.txt --user"
         sh './test_all.sh'
         junit 'artifacts/**/*.xml'
     }
