adding backward compatibility for rshiny-secrets

--- a/ocp-templates/ocp-config/rshiny-app/rshiny-secrets.yml
+++ b/ocp-templates/ocp-config/rshiny-app/rshiny-secrets.yml
@@ -38,5 +38,7 @@ objects:
     kind: Secret
     metadata:
       name: 'crowd-service-${COMPONENT}'
+      labels:
+        app: '${PROJECT}-${COMPONENT}'
     type: kubernetes.io/basic-auth
 
