--- a/ocp-templates/ocp-config/rshiny-app/rshiny-authproxy.yml
+++ b/ocp-templates/ocp-config/rshiny-app/rshiny-authproxy.yml
@@ -107,6 +107,8 @@ objects:
             - --tls-cert=/etc/tls/private/tls.crt
             - --tls-key=/etc/tls/private/tls.key
             - --cookie-secret=${SESSION_SECRET}
+            - >-
+              --openshift-sar={"namespace":"${PROJECT}-${ENV}","resource":"services","name":"${COMPONENT}-auth-proxy","verb":"get"}
             volumeMounts:
             - mountPath: /etc/tls/private
               name: ${COMPONENT}-auth-proxy-tls
