--- a/ocp-templates/ocp-config/cd-jenkins-master/cd-jenkins-master.yml
+++ b/ocp-templates/ocp-config/cd-jenkins-master/cd-jenkins-master.yml
@@ -294,7 +294,7 @@ parameters:
 - name: NAMESPACE
   value: cd
 - name: JENKINS_IMAGE_STREAM_TAG
-  value: jenkins-master:latest
+  value: jenkins-master:2
 - name: CD_USER_ID
   required: true
 - name: CD_USER_PWD
