--- a/jenkins-slaves/airflow/ocp-config/bc.yml
+++ b/jenkins-slaves/airflow/ocp-config/bc.yml
@@ -14,7 +14,7 @@ objects:
     output:
       to:
         kind: ImageStreamTag
-        name: jenkins-slave-airflow:latest
+        name: jenkins-slave-airflow:2
     postCommit: {}
     resources: {}
     runPolicy: Serial
@@ -36,7 +36,7 @@ objects:
             value: ${NEXUS_AUTH}
         from:
           kind: ImageStreamTag
-          name: jenkins-slave-base:latest
+          name: jenkins-slave-base:2
       type: Docker
     triggers: []
 parameters:
