--- a/jenkins-slaves/golang/Dockerfile.rhel7
+++ b/jenkins-slaves/golang/Dockerfile.rhel7
@@ -1,4 +1,4 @@
-FROM cd/jenkins-slave-base
+FROM cd/jenkins-slave-base:2
 
 LABEL maintainer="Michael Sauter <michael.sauter@boehringer-ingelheim.com>"
 
