--- a/ocp-templates/ocp-config/cd-jenkins-master/cd-jenkins-webhook-proxy.yml
+++ b/ocp-templates/ocp-config/cd-jenkins-master/cd-jenkins-webhook-proxy.yml
@@ -100,7 +100,7 @@ objects:
         - webhook-proxy
         from:
           kind: ImageStreamTag
-          name: jenkins-webhook-proxy:latest
+          name: jenkins-webhook-proxy:2
           namespace: '${NAMESPACE}'
       type: ImageChange
 - apiVersion: v1
