--- a/rundeck-jobs/quickstarts/airflow.yaml
+++ b/rundeck-jobs/quickstarts/airflow.yaml
@@ -58,7 +58,7 @@
       script: |-
         cd "/tmp/rundeck_@job.id@_@job.execid@/ods-project-quickstarters/ocp-templates"
 
-        sudo docker pull cd/jenkins-slave-base
+        sudo docker pull cd/jenkins-slave-base:2
         sudo docker build --build-arg OC_IP="@globals.openshift_apihost_lookup@" -t oc .
     - description: Create components
       script: |-
